added content and css modified

--- a/my-personal-site/index.html
+++ b/my-personal-site/index.html
@@ -5,13 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Rabi's Personal Site</title>
+
 </head>
 
 <body>
-  <table cellpadding = "20">
+  <table>
     <tr>
-      <td><img src="rambo.jpg" width="200" height="200" alt="A picture about RAMBO!"></td>
+      <td><img src="./images/me.jpg" width=200px alt="It is a circle bordered profile picture about Zoltan Rabi"></td>
       <td>
         <h1>Zoltan Rabi</h1>
         <p><em>A titulusom</em></p>
@@ -62,19 +64,19 @@
 
   </table>
   <hr>
-<h3>Skills</h3>
-<table>
-  <tbody>
-    <tr>
-      <td>Beer Drinking</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Weak up early in the morning</td>
-      <td>⭐</td>
-    </tr>
-  </tbody>
-</table>
+  <h3>Skills</h3>
+  <table>
+    <tbody>
+      <tr>
+        <td>Beer Drinking</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Weak up early in the morning</td>
+        <td>⭐</td>
+      </tr>
+    </tbody>
+  </table>
   <hr>
   <a href="contact.html">Contact me!</a>
 </body>
