finished html & css

--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -17,12 +17,13 @@
     <h2>self-taught <span>pro</span>grammer</h2>
     <img class="mountain" src="images/mountain-original.png" alt="">
   </div>
-    <div class="profile">
-    <img class= "profile-picture" src="images/me.jpg" alt="">
-      <h2>Hello.</h2>
-      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
-    </div>
-    <hr>
+  <div class="profile">
+    <img class="profile-picture" src="images/me.jpg" alt="">
+    <h2>Hello.</h2>
+    <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+  </div>
+  <hr>
+  <div class="middle-container">
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
@@ -49,12 +50,14 @@
       <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
     </div>
 
+  </div>
+
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p>© 2020 Zoltan Rabi</p>
+    <p class = "copyright">© 2020 Zoltan Rabi</p>
   </div>
 
 
